fix(k8s-base): use text-wrap instead of forcing line break
To be able to collapse line to one line on bigger screens

Ref: https://app.notion.com/p/signoz/3a5fcc6bcd19805f8929e549c646985d?v=65cfcc6bcd1982a6bee688d8fd55420c&p=3a5fcc6bcd19808a8a30ed9ddbfa029a&pm=s

--- a/frontend/src/container/InfraMonitoringK8sV2/Base/ColumnHeader.module.scss
+++ b/frontend/src/container/InfraMonitoringK8sV2/Base/ColumnHeader.module.scss
@@ -2,6 +2,7 @@
 	display: inline-flex;
 	align-items: center;
 	gap: var(--spacing-2);
+	text-wrap: auto;
 }
 
 .infoIcon {
